# TypeNext

./: LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  auto-imports.d.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  main.rs
src/components/: EditorLayout.vue  MarkdownPreview.vue  SourceEditor.vue  StatusBar.vue  TabBar.vue
src/services/: tauri.ts
src/stores/: editor.ts  file.ts  history.ts  settings.ts  tabManager.ts
src/styles/: global.scss  themes.scss
src/utils/: eventBus.ts  exportService.ts  keyBindings.ts
